// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`introspectOpenApiV2 introspection kind:object should introspect succesfully 1`] = `
"schema {
  query: Query
}

directive @globalOptions(endpoint: String, operationHeaders: ObjMap, queryParams: ObjMap, queryStringOptions: ObjMap, sourceName: String) on OBJECT

directive @httpOperation(httpMethod: HTTPMethod, isBinary: Boolean, operationSpecificHeaders: ObjMap, path: String, queryParamArgMap: ObjMap, queryStringOptionsByParam: ObjMap, requestBaseBody: ObjMap) on FIELD_DEFINITION

enum HTTPMethod {
  CONNECT
  DELETE
  GET
  HEAD
  OPTIONS
  PATCH
  POST
  PUT
  TRACE
}

scalar ObjMap

type Query @globalOptions(sourceName: "api", operationHeaders: "{}") {
  "Get example data"
  example: String @httpOperation(path: "/example", operationSpecificHeaders: "{\\"accept\\":\\"application/json\\"}", httpMethod: GET)
}"
`;

exports[`introspectOpenApiV2 introspection kind:object should introspect succesfully: wg_schema 1`] = `
"schema {
  query: Query
}

enum HTTPMethod {
  CONNECT
  DELETE
  GET
  HEAD
  OPTIONS
  PATCH
  POST
  PUT
  TRACE
}

scalar ObjMap

type Query {
  "Get example data"
  example: String
}"
`;

exports[`introspectOpenApiV2 introspection kind:string should introspect json string succesfully 1`] = `
"schema {
  query: Query
}

directive @globalOptions(endpoint: String, operationHeaders: ObjMap, queryParams: ObjMap, queryStringOptions: ObjMap, sourceName: String) on OBJECT

directive @httpOperation(httpMethod: HTTPMethod, isBinary: Boolean, operationSpecificHeaders: ObjMap, path: String, queryParamArgMap: ObjMap, queryStringOptionsByParam: ObjMap, requestBaseBody: ObjMap) on FIELD_DEFINITION

enum HTTPMethod {
  CONNECT
  DELETE
  GET
  HEAD
  OPTIONS
  PATCH
  POST
  PUT
  TRACE
}

scalar ObjMap

type Query @globalOptions(sourceName: "api", operationHeaders: "{}") {
  "Get example data"
  example: String @httpOperation(path: "/example", operationSpecificHeaders: "{\\"accept\\":\\"application/json\\"}", httpMethod: GET)
}"
`;

exports[`introspectOpenApiV2 introspection kind:string should introspect json string succesfully: wg_schema 1`] = `
"schema {
  query: Query
}

enum HTTPMethod {
  CONNECT
  DELETE
  GET
  HEAD
  OPTIONS
  PATCH
  POST
  PUT
  TRACE
}

scalar ObjMap

type Query {
  "Get example data"
  example: String
}"
`;

exports[`introspectOpenApiV2 introspection kind:string should introspect yaml string succesfully 1`] = `
"schema {
  query: Query
}

directive @globalOptions(endpoint: String, operationHeaders: ObjMap, queryParams: ObjMap, queryStringOptions: ObjMap, sourceName: String) on OBJECT

directive @httpOperation(httpMethod: HTTPMethod, isBinary: Boolean, operationSpecificHeaders: ObjMap, path: String, queryParamArgMap: ObjMap, queryStringOptionsByParam: ObjMap, requestBaseBody: ObjMap) on FIELD_DEFINITION

enum HTTPMethod {
  CONNECT
  DELETE
  GET
  HEAD
  OPTIONS
  PATCH
  POST
  PUT
  TRACE
}

scalar ObjMap

type Query @globalOptions(sourceName: "api", operationHeaders: "{}") {
  "Get example data"
  example: String @httpOperation(path: "/example", operationSpecificHeaders: "{\\"accept\\":\\"application/json\\"}", httpMethod: GET)
}"
`;

exports[`introspectOpenApiV2 introspection kind:string should introspect yaml string succesfully: wg_schema 1`] = `
"schema {
  query: Query
}

enum HTTPMethod {
  CONNECT
  DELETE
  GET
  HEAD
  OPTIONS
  PATCH
  POST
  PUT
  TRACE
}

scalar ObjMap

type Query {
  "Get example data"
  example: String
}"
`;
